--- a/css/styles.css
+++ b/css/styles.css
@@ -12,8 +12,8 @@ h2 {
 header h2 {
     color: #CEC8FF;
 }
-#
-footer {
+
+.site-footer {
     background-image: linear-gradient(#CEC8FF, white);
     padding: 20px 0;
 }
