--- a/css/styles.css
+++ b/css/styles.css
@@ -43,4 +43,10 @@ header h2 {
     border: solid #5637DD;
 }
 
+#carouselButton {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: 100;
+}
 
